Fixed several static analysis warnings as reported by FindBugs.
git-svn-id: https://itrust.svn.sourceforge.net/svnroot/itrust@107 12e484f7-5e12-421d-bbfb-6194dbfb34fd